2002-11-03  John Harper  <jsh@unfactored.org>

	Merged these changes from HEAD:

	* sawfish/wm/session/init.jl, sawfish/wm/session/load.jl
	(sm-sloppy-id-matching): added this option to let me get some
	level of session management from broken applications (xterm in
	this case, which doesn't seem to set SM_CLIENT_ID by the time
	it maps the window)

	* sawfish/wm/util/font.jl (xlfd-description->face,
	face->xlfd-description): the missing pieces to this module.

	Also, handle the Xft abbreviated styles more correctly

	* sawfish/wm/windows.jl (dock-window-depth): changed this
	again, now to zero, the depth of normal windows

2002-11-03  John Harper  <jsh@unfactored.org>

	Merged these changes from HEAD:

	* sawfish/wm/custom.jl: font [de]serializers now export (TYPE .
	NAME), they accept both this and the old untyped form

	* sawfish/wm/util/font.jl: new file, some functions for
	representing font (face) names, and converting between Xft and
	Pango representations of these names. Somewhat incomplete
	(doesn't know how to map Pango widths to Xft yet)

	2002-11-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/menus.jl: added some more accelerators
	* sawfish/wm/workspace.jl (static-workspace-menus): added a few
	accelerators (for #76286)

2002-11-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/keymaps.jl (wm-modifier-value): shorter doc string

2002-11-02  John Harper  <jsh@unfactored.org>

	* more merging:

	2002-11-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/gaol.jl: added get-font-typed, font-type-exists-p
	and font-name functions

	* sawfish/wm/windows.jl (dock-window-depth): changed to -3,
	places the dock above the desktop, but below pretty much
	everything else

2002-10-20  John Harper  <jsh@unfactored.org>

	* more merging:

	2002-10-20  John Harper  <jsh@unfactored.org>

	* sawfish/wm/windows.jl (window-transient-p,
	mark-window-as-transient): new functions. window-transient-p
	used to be in C code
