@@ -1,3 +1,11 @@
+2002-11-08  John Harper  <jsh@unfactored.org>
+
+	Merged from HEAD:
+
+	* sawfish/wm/util/font.jl: handle XLFD fonts with no dashes,
+	e.g. like "fixed", also, be more intelligent when creating
+	Pango names
+
 2002-11-03  John Harper  <jsh@unfactored.org>
 
 	Merged these changes from HEAD:
